	* let parser_class be configured as a constructor option,
	  defaulting to XS if available, else regular.  (unless
	  $ENV{NO_XS} is set, in which case the default is regular)

2007-05-02: version 1.21

	* new faster optional interface for GetParser subclasses.  doing
	  this release so upcoming Cache::Memcached::GetParserXS can
	  depend on this.  otherwise this release isn't interesting.

2007-04-16: version 1.20

        * fix "Warning produced when flush_all called" from CDENT
	  http://rt.cpan.org/Public/Bug/Display.html?id=22181

	* support access via unix domain sockets. (Nathan Neulinger <nneul@umr.edu>)

	* abstract out response parsing into own class, and add XS-module
	  detection, so if you have the XS (C) version, things'll be faster.
	  that part's not done yet.

2006-07-03
	* don't use dual scalar/glob sockets.  makes it all profilable
	  again under SmallProf, DProf, and Devel::Profiler, all three
	  of which used to barf on those weird sockets previously
	* only init_buckets once, when servers are changed
	* don't call sock_to_host and get_sock as much:  cache closer
	  in get_multi
	* more internal caching (buck2sock, etc)
	* fast paths for namespaces/single sock/etc in a few more places
	* general micro-speedups all over

2006-06-27
	* patch from Maxim Dounin <mdounin@rambler-co.ru> to fix a typo
	  which caused no_rehash flag to not work.
	* release 1.18

2006-04-29
	* flush_all command from Patrick Michael Kane <modus-memcache@pr.es.to>
	* document namespaces
	* release 1.17

2006-04-29
	* fix stats method (people have only been asking since 2004  :-/)
	* add tests
	* move Memcached to lib/Cache directory to be more CPAN-friendly
	* release 1.16

2005-09-20
	* configurable connect delays and callback on connect failure (brad)
	* release 1.15

2005-08-09
        * _connect_sock never works in blocking mode because of a bug in setting
	the default timeout. (Gaal)

2004-07-27
	* release 1.14

2004-07-27